--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="apple-touch-icon" href="./icons/icon-128.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
+    <link rel="manifest" href="ginko.webmanifest">
+
     <!-- application styles -->
     <link rel="stylesheet" href="style.css">
     
